# textwarp

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
src/textwarp/: __init__.py  __main__.py  analysis.py  warping.py
tests/: conftest.py  test_analysis.py  test_init.py  test_main.py  test_warping.py  test_zalgo.py
tests/cli/: test_args.py  test_dispatch.py  test_formatting.py  test_parsing.py  test_pipeline.py  test_processing.py  test_runners.py  test_spinner.py  test_ui.py  test_validation.py
tests/commands/: test_analysis.py  test_replacement.py
tests/core/: test_config.py  test_context.py  test_data_integrity.py  test_decorators.py  test_encoding.py  test_enums.py  test_exceptions.py  test_i18n.py  test_models.py  test_types.py  test_utils.py
tests/lib/: test_contractions.py  test_encoding.py  test_manipulation.py  test_markdown.py  test_nlp.py  test_numbers.py  test_punctuation.py  test_replacement.py  test_unicode.py
textcount/textcount/: parsing.py
textwarp/: __init__.py  __main__.py  _analysis_commands.py  _args.py  _config.py  _constants.py  _decorators.py  _dispatch.py  _encoding.py  _enums.py  _exceptions.py  _formatting.py  _helpers.py  _input_output.py  _manipulation.py  _model.py  _models.py  _nlp.py  _numbers.py  _parsing.py  _pos_counts.py  _regexes.py  _runners.py  _types.py  _ui.py  _validation.py  analysis.py  args.py  commands.py  config.py  constants.py  enums.py  input_output.py  parsing.py  processing.py  regexes.py  setup.py  validation.py  warping.py
textwarp/_cli/: __init__.py  args.py  dispatch.py  formatting.py  parsing.py  runners.py  ui.py  validation.py
textwarp/_commands/: __init__.py  _analysis.py  _replacement.py  analysis.py  replacement.py
textwarp/_constants/: __init__.py  definitions.py  lookups.py  regexes.py  sets.py  strings.py  tuples.py  variants.py
textwarp/_core/: __init__.py  config.py  context.py  decorators.py  encoding.py  enums.py  exceptions.py  models.py  types.py  utils.py
textwarp/_data/: ambiguous_contractions.json  capitalized_abbreviations_map.json  contractions_map.json
textwarp/_helpers/: __init__.py  _capitalization_from_entity.py  _capitalization_from_string.py  _case_conversion.py  _casing.py  _contraction_expansion.py  _entity_capitalization.py  _nlp_processing.py  _punctuation.py  _quote_conversion.py  _string_capitalization.py  apostrophes.py  case_conversion.py  entity_capitalization.py  entity_casing.py  nlp_processing.py  punctuation.py  quote_conversion.py  string_capitalization.py  string_casing.py  token_capitalization.py
textwarp/_lib/: __init__.py  contractions.py  encoding.py  manipulation.py  nlp.py  (+3 more)
(+244 files in other folders)
