[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "textwarp"
version = "0.6"
description = "Package for analyzing and transforming text"
readme = "README.md"
keywords = ["text", "clipboard"]
license = {text = "MIT"}
authors = [
  { name = "Adam Grim" }
]
dependencies = [
    "pyperclip",
    "regex",
    "spacy"
]
requires-python = ">=3.10"

[project.optional-dependencies]

[project.urls]
"Source" = "https://github.com/adamggrim/textwarp"

[project.scripts]
textwarp = "textwarp.__main__:main"

[tool.setuptools]
packages = ["textwarp"]
