[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "textwarp"
version = "0.6"
description = "Package for analyzing and transforming text"
readme = "README.md"
keywords = ["text", "clipboard"]
license = {text = "MIT"}
authors = [
  { name = "Adam Grim" }
]
dependencies = [
    "pyperclip>=1.8.2",
    "regex>=2023.6.3",
    "spacy>=3.7.0"
]
requires-python = ">=3.10"

[project.optional-dependencies]
nlp = ["spacy[transformers]>=3.7.0"]

[project.urls]
"Source" = "https://github.com/adamggrim/textwarp"

[project.scripts]
textwarp = "textwarp.__main__:main"

[tool.setuptools]
packages = ["textwarp"]
