[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "textwarp"
version = "0.6"
description = "Package for analyzing and transforming text"
readme = "README.md"
keywords = ["text", "clipboard"]
license = {text = "MIT"}
authors = [
  { name = "Adam Grim" }
]
dependencies = [
    "pyperclip>=1.8.2",
    "regex>=2023.6.3",
    "spacy>=3.7.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
markdown = ["marko>=2.0.0"]
nlp = ["spacy[transformers]>=3.7.0"]

[project.urls]
"Source" = "https://github.com/adamggrim/textwarp"

[project.scripts]
textwarp = "textwarp.__main__:main"

[tool.setuptools]
packages = ["textwarp"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "marko.*",
    "pyperclip.*",
    "regex.*",
    "spacy.*"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "textwarp._lib.markdown",
    "textwarp._lib.nlp"
]
warn_return_any = false
